--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <h1>Petit exercice</h1> <!-- Petit titre-->
             <p>Je suis un étudiant en informatique et je suis en train de faire un petit exercice pour m'entrainer</p> <!-- Intro blabla-->
         <br>
+            <a href="alexandre.c-mercado@mediaschool.com">Envoyez moi des mails</a>
+            <a href="tel+330659198065"target="_blank"> <strong>Appelez quand vous voulez</strong> </a>        
+        <br>
             <h2>Pourquoi l'informatique: </h2> <!-- Des points pour faire semblant-->
                 <ul>
                   <li>J'aime apprendre</li>
@@ -17,7 +20,7 @@
         <br>
             <h2>Comment m'améliorer: </h2> <!-- Des points très important-->
              <ol>
-                 <li>Petite certif à coté</li>
+                 <a href="https://www.edx.org"target="_blank"><li>Petite certif à coté</li></a>
                  <li>Reviser les cours</li>
                  <li>Être discipliné tout le long</li>
              </ol>
@@ -25,25 +28,28 @@
         <p><strong>Quoi attendre dans le proche futur</strong></p>
         <!-- Un petit blabla pour finir-->
              <p>A la fin de mes études, être à l'aise dans une langue informatique et avoir initié plusieur projet dans ma ligne professionnel</p>
-   <img src="../portfolio/tintin.png"
-        alt="BD France"
-        title="tintin"
-        width="100px"
-        height="100px">
+        <img src="../portfolio/tintin.png"
+            alt="BD France"
+            title="tintin"
+            width="100px"
+            height="100px">
         <!-- Une image depuis la racine (direct sans passer par un fichier)-->
-   <img src="img/CarsTuners.jpg"
-        alt="tuners"
-        title="Cars Tuners"
-        width="200px"
-        height="100px">
+        <img src="img/CarsTuners.jpg"
+            alt="tuners"
+            title="Cars Tuners"
+            width="200px"
+            height="100px">
         <!-- Une image depuis un sous dossier -->
-   <img src="high-school-dxd-hero-anime.webp"
-        width="250px"
-        height="400px">
+        <img src="high-school-dxd-hero-anime.webp"
+            width="250px"
+            height="400px">
         <!-- Une image depuis le même dossier -->
-   <img src="Google_2015_logo.svg.png"
+        <a href="https://google.com"target="_self"><img src="Google_2015_logo.svg.png"
         width="500px">
-         </body>    
+        </a>
+
+
+    </body>    
 </html>
 
 
